--- a/src/app/restrict/expense/add-expenses/add-short-expense/add-short-expense.component.html
+++ b/src/app/restrict/expense/add-expenses/add-short-expense/add-short-expense.component.html
@@ -1,6 +1,5 @@
-<!-- create new expense-->
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-blue">Criar despesa não corrente de curta duração</h1>
+<div class="container">
+    <h1 class="text-title">Criar despesa não corrente de curta duração</h1>
 </div><hr>
     
 <!--form expenses-->
