--- a/src/app/restrict/expense/add-expenses/add-variable-expense/add-variable-expense.component.html
+++ b/src/app/restrict/expense/add-expenses/add-variable-expense/add-variable-expense.component.html
@@ -1,26 +1,25 @@
-<div class="d-sm-flex align-items-center justify-content-between mb-4">
-  <h1 class="h3 mb-0 text-blue">Criar despesa corrente variável</h1>
-</div><hr>
-  
+<div class="container">
+  <h1 class="text-title">{{ types[1] }}</h1>
+</div>
+<hr>
+
 <!--form expenses-->
-<form #itemForm="ngForm" name="form" ngSubmit="onSubmit()">
+<form (ngSubmit)="onSubmit()" #form="ngForm">
   <div class="container-fluid">
     <div class="row">
       <!-- expense name -->
-      <div class="col-sm-6" [class.has-error]="name.invalid && name.touched" [class.has-success]="name.valid">
-        <label [attr.for]="name" class="control-label">Nome da despesa:</label>
-        <input required [id]="name" name="expenseName" type="text" class="form-control" 
-        [(ngModel)]="expense.expenseName" #name="ngModel">
+      <div class="col-sm-6">
+        <label for="name" class="control-label">Nome da despesa:</label>
+        <input required id="name" name="name" type="text" class="form-control" [(ngModel)]="expense.expenseName"
+          #name="ngModel">
         <span class="help-block" *ngIf="name.invalid && name.touched"> O nome da despesa é obrigatório</span>
       </div>
-
       <!-- expense type -->
-      <div class="col-sm-6" [class.has-error]="type.touched" [class.has-success]="type.valid">
-        <label [attr.for]="type">Tipo da despesa:</label>
-        <select required [id]="type" name="itemName" class="form-control ml-1" 
-        [(ngModel)]="expense.expenseSubtype" #type="ngModel" (change)="getExpenseType()">
-          <option *ngFor="let type of expenseSubtype" [ngValue]="type">{{type}}</option>
-          <span class="help-block" *ngIf="type.touched"> O tipo de despesa é obrigatório</span>
+      <div class="col-sm-6">
+        <label for="type">Tipo da despesa:</label>
+        <select required id="type" name="type" class="form-control ml-1" [(ngModel)]="expense.expenseSubtype"
+          #type="ngModel">
+          <option *ngFor="let subtype of subtypes" [ngValue]="subtype">{{ subtype }}</option>
         </select>
       </div>
     </div>
@@ -28,75 +27,92 @@
     <div class="row">
       <!-- date -->
       <div class="col-sm-6">
-        <label for="expenseDate" class="control-label">Data:</label>
-        <input required id="expenseDate" name="expenseDate" type="text" class="form-control" 
-        [(ngModel)]="expense.expenseDate" bsDatepicker [bsConfig]="bsConfig">
+        <label for="date" class="control-label">Data da despesa:</label>
+        <input required id="date" name="date" type="text" class="form-control" [(ngModel)]="expense.expenseDate"
+          bsDatepicker [bsConfig]="bsConfig">
+      </div>
+      <!--currency-->
+      <div class="col-sm-6">
+        <label for="currency">Moeda:</label>
+        <select required id="currency" name="currency" class="form-control ml-1" [(ngModel)]="expense.currency"
+          #currency="ngModel">
+          <option *ngFor="let currency of currencies" [ngValue]="currency"> {{ currency }} </option>
+        </select>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <!-- comments -->
+      <div class="col-sm-12">
+        <label>Observações:</label>
+        <textarea name="expenseName" type="text" rows="2" class="form-control ml-1"
+          [(ngModel)]="expense.expenseDescription"></textarea>
       </div>
     </div>
   </div>
   <br>
   <hr>
   <!-- items -->
+  <h4 class="mb-2 text-blue">Items da despesa</h4><br>
   <div class="container-fluid" *ngFor="let obj of dataArray; let i = index">
-    <h4 class="mb-2 text-blue2">Items da despesa</h4><br>
-    <h5 class="mb-2 text-gray-800">&nbsp;&nbsp;&nbsp;Item# {{i+1}}</h5><br>
+    <h5 class="mb-2 text-gray">&nbsp;&nbsp;&nbsp;Item# {{i+1}}</h5>
+    <br>
     <div class="row">
       <!--item name-->
-      <div class="col-sm-6" [class.has-error]="item.invalid && item.touched" [class.has-success]="item.valid">
+      <div class="col-sm-6">
         <label [attr.for]="'itemName'+i" class="control-label">Nome do item:</label>
-        <input required [id]="'itemName'+i" name="itemName{{i}}" type="text" class="form-control" [(ngModel)]="obj.itemName" #item="ngModel">
+        <input required [id]="'itemName'+i" name="itemName{{i}}" type="text" class="form-control"
+          [(ngModel)]="obj.itemName" #item="ngModel">
         <span class="help-block" *ngIf="item.invalid && item.touched"> O nome do item é obrigatório</span>
       </div>
       <!--item description-->
       <div class="col-sm-6">
         <label for="description">Descrição:</label>
-        <textarea id="description" name="description{{i}}" type="text" rows="1" class="form-control" [(ngModel)]="obj.description" ></textarea>
+        <textarea id="description" name="description{{i}}" type="text" rows="1" class="form-control"
+          [(ngModel)]="obj.description"></textarea>
       </div>
     </div>
     <br>
     <div class="row">
-      <!--currency-->
-      <div class="col-sm-6">
-        <label for="currency">Moeda:</label>
-        <select required id="currency" name="currency{{i}}" class="form-control ml-1" [(ngModel)]="obj.currency" (change)="getCurrency()">
-          <option *ngFor="let c of currency"[value]="c"> {{c}} </option>
-        </select>
-      </div>
       <!--value-->
-      <div class="col-sm-6" [class.has-error]="val.invalid && val.touched" [class.has-success]="val.valid">
+      <div class="col-sm-6">
         <label for="value" class="control-label">Valor:</label>
-        <input required id="value" name="value{{i}}" type="number" min="0" class="form-control"  
-        [(ngModel)]="obj.valueNumber" #val="ngModel" (blur)="valueSum()">
+        <input required id="value" name="value{{i}}" type="number" min="0" class="form-control"
+          [(ngModel)]="obj.valueNumber" #val="ngModel" (blur)="valueSum()">
         <span class="help-block" *ngIf="val.invalid && val.touched"> O valor do item é obrigatório </span>
         <br>
       </div>
     </div>
     <br>
-    <!--<label>Quer adicionar ficheiro?</label>-->
-    <button type="button" class="btn btn-primary" name="add{{i}}" *ngIf="!obj.toggle" (click) ="obj.getOpenFileChooser()">Adicionar ficheiro</button>
-    <button type="button" class="btn btn-primary" name="add{{i}}" *ngIf="obj.toggle" (click) ="obj.getOpenFileChooser()"> Fechar</button>
-    <br><br>
+    <br>
+    <button type="button" class="btn btn-secondary" name="add{{i}}" *ngIf="!obj.toggle"
+      (click)="obj.getOpenFileChooser()">Adicionar ficheiro</button>
+    <button type="button" class="btn btn-secondary" name="add{{i}}" *ngIf="obj.toggle"
+      (click)="obj.getOpenFileChooser()"> Fechar</button>
+    <br>
+    <br>
     <div *ngIf="obj.toggle">
       <div class="input-group">
         <div class="input-group-prepend">
           <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
         </div>
         <div class="custom-file">
-          <input type="file" class="custom-file-input" id="inputGroupFile01"
-            aria-describedby="inputGroupFileAddon01">
+          <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
           <label class="custom-file-label" for="inputGroupFile01">Escolher ficheiro</label>
         </div>
       </div>
     </div>
-    <br><br>
+    <br>
+    <br>
     <div class="row">
       <div class="col-0" *ngIf="i!=0">
         <span (click)="removeItem(i)" class="btn btn-danger">-</span>
       </div>
       <div class="col-1">
-        <span (click)="addItem()" class="btn btn-success" >+</span>
+        <span (click)="addItem()" class="btn btn-success">+</span>
       </div>
-    </div><hr>
+    </div>
+    <hr>
   </div>
   <!--end of item-->
   <br>
@@ -106,17 +122,15 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-4">
+        <label>Custo total:</label>
         <input id="value" type="number" class="form-control" readonly value="{{ total }}">
       </div>
     </div>
-
     <br>
-    <!--<br>-->
-    <br><br>
-    <button class="btn btn-primary" type="submit" [disabled]="itemForm.invalid" (click)="onSubmit()">Submeter</button>
+    <br>
+    <br>
+    <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Submeter</button>
   </div>
   <br>
   <br>
 </form>
-    
-  
