--- a/src/app/restrict/restrict.component.html
+++ b/src/app/restrict/restrict.component.html
@@ -42,7 +42,7 @@
       <li class="nav-item">
         <div class="pointerCursor">
           <a routerLink="despesas/listar-despesa" class="nav-link collapsed" data-toggle="collapse" data-target="#collapseUtilities" 
-            aria-expanded="true" aria-controls="collapseUtilities" (click)="serch">
+            aria-expanded="true" aria-controls="collapseUtilities" (click)="serch()">
             <i class="fas fa-search-dollar"></i> <span>Procurar</span>
           </a>
         </div>
